--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.arc.cdt</groupId>
-  <artifactId>eclipse-plugin</artifactId>
-  <version>1</version>
+  <artifactId>plugin</artifactId>
+  <version>2016.9.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
     <module>feature</module>
+    <module>repository</module>
   </modules>
 
   <build>
@@ -14,7 +15,7 @@
 	<plugin>
 	    <groupId>org.eclipse.tycho</groupId>
 	    <artifactId>tycho-maven-plugin</artifactId>
-	    <version>0.24.0</version>
+	    <version>0.26.0</version>
 	    <extensions>true</extensions>
 	</plugin>
     </plugins>
