--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.arc.cdt</groupId>
   <artifactId>plugin</artifactId>
-  <version>2016.9.0-SNAPSHOT</version>
+  <version>0.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
-    <module>feature</module>
-    <module>repository</module>
+      <module>repository</module>
+      <!--<module>feature</module>-->
   </modules>
 
   <build>
