--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <modules>
       <module>repository</module>
-      <!--<module>feature</module>-->
+      <module>feature</module>
   </modules>
 
   <build>
