--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,19 @@
       <module>feature</module>
   </modules>
 
+  <repositories>
+	<repository>
+		<id>cdt</id>
+		<url>http://download.eclipse.org/tools/cdt/releases/9.2</url>
+		<layout>p2</layout>
+	</repository>
+	<repository>
+		<id>eclipse-neon</id>
+		<url>http://download.eclipse.org/releases/neon</url>
+		<layout>p2</layout>
+	</repository>
+  </repositories>
+
   <build>
     <plugins>
 	<plugin>
