--- a/com.arc.embeddedcdt/pom.xml
+++ b/com.arc.embeddedcdt/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>plugin</artifactId>
 	<version>0.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>com.arc.embedded.cdt</artifactId>
-    <version>0.0.0-SNAPSHOT</version>
+    <artifactId>com.arc.embeddedcdt</artifactId>
+    <version>2016.9.0</version>
     <packaging>eclipse-plugin</packaging>
 </project>
