--- a/com.arc.embeddedcdt/build.properties
+++ b/com.arc.embeddedcdt/build.properties
@@ -1,23 +1,16 @@
-output.arcembeddedcdt.jar = bin/
-bin.includes = plugin.xml,\
-               icons/,\
-               plugin.xml,\
+source.. = src/
+output.. = bin/
+bin.includes = META-INF/,\
+               bin/,\
                icons/,\
                build.properties,\
-               bin/,\
-               .classpath,\
-               .project,\
                plugin.properties,\
-               META-INF/,\
                lib/,\
                lib/commons-codec-1.3.jar,\
                lib/commons-httpclient-3.1.jar,\
-               com.arc.embeddedcdt..jar
-src.includes = bin/,\
-               icons/,\
+               plugin.xml
+src.includes = icons/,\
                lib/
-jars.compile.order = arcembeddedcdt.jar
-source.com.arc.embeddedcdt..jar = src/
 javacSource = 1.7
 javacTarget = 1.7
 
