--- a/org.eclipse.cdt.cross.arc.gnu/build.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/build.properties
@@ -9,8 +9,6 @@ bin.includes = META-INF/,\
                bin/,\
                plugin.xml,\
                build.properties,\
-               src/,\
-               templates/,\
-               .classpath
+               templates/
 javacSource = 1.7
 javacTarget = 1.7
