--- a/org.eclipse.cdt.cross.arc.gnu.uclibc/build.properties
+++ b/org.eclipse.cdt.cross.arc.gnu.uclibc/build.properties
@@ -1,13 +1,14 @@
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
+               .,\
                about.html,\
                about.ini,\
                about.properties,\
                arc32x32b.gif,\
-               bin/,\
+               plugin.xml,\
                build.properties,\
-               README.txt,\
-               pluginwithoutcreat.xml,\
-               plugin.xml
+               templates/
 javacSource = 1.7
 javacTarget = 1.7
 
