debug: Introduce preference storage
Signed-off-by: Anton Kolesov <Anton.Kolesov@synopsys.com>

--- a/com.arc.embeddedcdt/plugin.xml
+++ b/com.arc.embeddedcdt/plugin.xml
@@ -179,6 +179,12 @@
          </perspective>
       </shortcut>
  </extension>
+    <extension
+          point="org.eclipse.core.runtime.preferences">
+       <initializer
+             class="com.arc.embeddedcdt.LaunchPreferenceInitializer">
+       </initializer>
+    </extension>
    
 </plugin>
 
