Stop using RxTx, insert cdt.serial instead
We needed to get 64-bit RxTx library for Windows, but this plan has
crashed, becides,RxTx is too old. That's why whe decided to replace RxTx
functionality by cdt.native.serial plugin. Now projects work on win-32,
win-64, linux-64.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <module>com.arc.embeddedcdt.rxtx</module>
     <module>org.eclipse.cdt.cross.arc.gnu</module>
     <module>org.eclipse.cdt.cross.arc.gnu.uclibc</module>
+    <module>org.eclipse.cdt.cross.arc.gnu</module>
   </modules>
 
   <properties>
