maven: Disable XZ compression for repository
There is no need for XZ compression in our p2 repository, since out
artifacts are small, so there is little gain from XZ over zip.

Signed-off-by: Anton Kolesov <Anton.Kolesov@synopsys.com>

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,17 @@
           </environments>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-p2-repository-plugin</artifactId>
+        <version>0.26.0</version>
+        <configuration>
+          <!-- XZ compression is not needed for our purposes. -->
+          <xzCompress>false</xzCompress>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 </project>
