--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -7158,6 +7158,42 @@
                id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
          </toolChain>
       </template>
+      <template
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EM9_Empty_C_Project">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EM9_Empty_CPP_Project">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EM11_Empty_C_Project">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EM11_Empty_CPP_Project">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
+         </toolChain>
+      </template>
    </extension>
    <extension
          point="org.eclipse.cdt.core.templates">
@@ -7195,6 +7231,18 @@
             filterPattern=".*g\+\+"
             id="org.eclipse.cdt.cross.arc.gnu.templates.EM7_Empty_CPP_Project"
             location="$nl$/templates/projecttemplates/EM7_Empty_CPP_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+      </template>
+      <template
+            filterPattern=".*gcc"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EM9_Empty_C_Project"
+            location="$nl$/templates/projecttemplates/EM9_Empty_C_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+      </template>
+      <template
+            filterPattern=".*g\+\+"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EM9_Empty_CPP_Project"
+            location="$nl$/templates/projecttemplates/EM9_Empty_CPP_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
       </template>
 
@@ -7245,6 +7293,18 @@
             id="org.eclipse.cdt.cross.arc.gnu.templates.AXS103_Empty_CPP_Project"
             location="$nl$/templates/projecttemplates/AXS103_Empty_CPP_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.axs103.buildArtefactType.application">
+      </template>
+      <template
+            filterPattern=".*gcc"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EM11_Empty_C_Project"
+            location="$nl$/templates/projecttemplates/EM11_Empty_C_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+      </template>
+      <template
+            filterPattern=".*g\+\+"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EM11_Empty_CPP_Project"
+            location="$nl$/templates/projecttemplates/EM11_Empty_CPP_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
       </template>
    </extension>
    <extension
