--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -3923,7 +3923,8 @@
                category="org.eclipse.cdt.cross.arc.gnu.600.linux.category.target"
                id="org.eclipse.cdt.cross.arc.gnu.600.linux.option.target.barrelshifter"
                name="Barrel shifter (-mbarrel-shifter)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.barrelshifter">
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.barrelshifter"
+               value="true">
          </option>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
@@ -4480,11 +4481,12 @@
                value="true">
          </option>
           <option
-               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
-               category="org.eclipse.cdt.cross.arc.gnu.700.linux.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.700.linux.option.target.swap"
-               name="Swap instruction (-mswap)"
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.swap">
+                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+                category="org.eclipse.cdt.cross.arc.gnu.700.linux.category.target"
+                id="org.eclipse.cdt.cross.arc.gnu.700.linux.option.target.swap"
+                name="Swap instruction (-mswap)"
+                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.swap"
+                value="true">
          </option>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
