--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -686,6 +686,65 @@
             name="Include C defines from TCF"
             valueType="boolean">
       </option>
+      <option
+            applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+            id="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specsem"
+            name="Use GCC specs file (ARC EM)"
+            valueType="enumerated">
+         <enumeratedOptionValue
+               command="--specs=nsim.specs"
+               id="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specsem.nsim"
+               isDefault="true"
+               name="nsim">
+         </enumeratedOptionValue>
+         <enumeratedOptionValue
+               command="--specs=emsk_em9d.specs"
+               id="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specsem.emsk_em9d"
+               name="emsk_em9d">
+         </enumeratedOptionValue>
+         <enumeratedOptionValue
+               command="--specs=emsk_em11d.specs"
+               id="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specsem.emsk_em11d"
+               name="emsk_em11d">
+         </enumeratedOptionValue>
+         <enumeratedOptionValue
+               command="--specs=nosys.specs"
+               id="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specsem.nosys"
+               name="nosys">
+         </enumeratedOptionValue>
+         <enumeratedOptionValue
+               id="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specsem.none"
+               name="None">
+         </enumeratedOptionValue>
+      </option>
+      <option
+            applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+            id="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs"
+            name="Use GCC specs file"
+            valueType="enumerated">
+         <enumeratedOptionValue
+               command="--specs=nsim.specs"
+               id="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs.nsim"
+               isDefault="true"
+               name="nsim">
+         </enumeratedOptionValue>
+         <enumeratedOptionValue
+               command="--specs=nosys.specs"
+               id="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs.nosys"
+               name="nosys">
+         </enumeratedOptionValue>
+         <enumeratedOptionValue
+               id="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs.none"
+               name="None">
+         </enumeratedOptionValue>
+      </option>
+      <option
+            command="--specs=nano.specs"
+            id="org.eclipse.cdt.cross.arc.gnu.base.option.linker.nano"
+            name="Enable nano.specs to use standard libraries optimized for code size"
+            useByScannerDiscovery="false"
+            valueType="boolean">
+      </option>
       </tool>
       <builder
             command="make"
@@ -1534,6 +1593,12 @@
                name="Omit all symbol information (-s)"
                valueType="boolean">
          </option>
+         <option
+               category="org.eclipse.cdt.cross.arc.gnu.c.link.category.general"
+               id="org.eclipse.cdt.cross.arc.gnu.c.link.option.nano"
+               name="Enable nano.specs to use standard libraries optimized for code size"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.nano">
+         </option>
          <optionCategory
                id="org.eclipse.cdt.cross.arc.gnu.c.link.category.libs"
                name="Libraries"
@@ -1599,7 +1664,6 @@
          </option>
          <option
                category="org.eclipse.cdt.cross.arc.gnu.c.link.category.other"
-               defaultValue="--specs=nsim.specs"
                id="org.eclipse.cdt.cross.arc.gnu.c.link.option.otherflags"
                name="Other flags"
                valueType="string">
@@ -1702,6 +1766,12 @@
                id="org.eclipse.cdt.cross.arc.gnu.cpp.link.option.strip"
                name="Omit all symbol information (-s)"
                valueType="boolean">
+         </option>
+         <option
+               category="org.eclipse.cdt.cross.arc.gnu.cpp.link.category.general"
+               id="org.eclipse.cdt.cross.arc.gnu.cpp.link.option.nano"
+               name="Enable nano.specs to use standard libraries optimized for code size"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.nano">
          </option>
          <optionCategory
                id="org.eclipse.cdt.cross.arc.gnu.cpp.link.category.libs"
@@ -2292,12 +2362,24 @@
                isAbstract="false"
                name="ARC ELF32 GCC C Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.c.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.c.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.em.linux.c.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specsem">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.em.linux.cpp.linker.base"
                isAbstract="false"
                name="ARC ELF32 GCC C++ Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.cpp.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.cpp.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.em.linux.cpp.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specsem">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.em.linux.archiver.base"
@@ -2889,12 +2971,24 @@
                isAbstract="false"
                name="ARC ELF32 GCC C Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.eb.c.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.c.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.c.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specsem">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.cpp.linker.base"
                isAbstract="false"
                name="ARC ELF32 GCC C++ Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.eb.cpp.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.cpp.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.cpp.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specsem">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.em.eb.linux.archiver.base"
@@ -3486,12 +3580,24 @@
                isAbstract="false"
                name="ARC ELF32 GCC C Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.c.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.c.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.hs.linux.c.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.hs.linux.cpp.linker.base"
                isAbstract="false"
                name="ARC ELF32 GCC C++ Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.cpp.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.cpp.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.hs.linux.cpp.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.hs.linux.archiver.base"
@@ -3864,12 +3970,24 @@
                isAbstract="false"
                name="ARC ELF32 GCC C Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.c.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.c.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.600.linux.c.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.600.linux.cpp.linker.base"
                isAbstract="false"
                name="ARC ELF32 GCC C++ Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.cpp.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.cpp.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.600.linux.cpp.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.600.linux.archiver.base"
@@ -4418,12 +4536,24 @@
                isAbstract="false"
                name="ARC ELF32 GCC C Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.c.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.c.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.700.linux.c.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.700.linux.cpp.linker.base"
                isAbstract="false"
                name="ARC ELF32 GCC C++ Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.cpp.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.cpp.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.700.linux.cpp.linker.base"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.700.linux.archiver.base"
@@ -4706,12 +4836,24 @@
                isAbstract="false"
                name="ARC ELF32 GCC C Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.eb.c.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.c.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.c.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.cpp.linker.base"
                isAbstract="false"
                name="ARC ELF32 GCC C++ Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.eb.cpp.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.cpp.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.cpp.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.archiver.base"
@@ -5225,12 +5367,24 @@
                isAbstract="false"
                name="ARC ELF32 GCC C Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.eb.c.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.c.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.c.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.cpp.linker.base"
                isAbstract="false"
                name="ARC ELF32 GCC C++ Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.eb.cpp.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.cpp.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.cpp.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.700.eb.linux.archiver.base"
@@ -5616,12 +5770,24 @@
                isAbstract="false"
                name="ARC ELF32 GCC C Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.eb.c.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.c.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.600.eb.linux.c.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.600.eb.linux.cpp.linker.base"
                isAbstract="false"
                name="ARC ELF32 GCC C++ Linker"
                superClass="org.eclipse.cdt.cross.arc.gnu.eb.cpp.linker">
+            <option
+                  category="org.eclipse.cdt.cross.arc.gnu.cpp.link.category.general"
+                  id="org.eclipse.cdt.cross.arc.gnu.600.eb.linux.cpp.linker.base.option.specs"
+                  name="Use GCC specs file"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specs">
+            </option>
          </tool>
          <tool
                id="org.eclipse.cdt.cross.arc.gnu.600.eb.linux.archiver.base"
