--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -694,7 +694,6 @@
          <enumeratedOptionValue
                command="--specs=nsim.specs"
                id="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specsem.nsim"
-               isDefault="true"
                name="nsim">
          </enumeratedOptionValue>
          <enumeratedOptionValue
@@ -714,6 +713,7 @@
          </enumeratedOptionValue>
          <enumeratedOptionValue
                id="org.eclipse.cdt.cross.arc.gnu.base.option.linker.specsem.none"
+               isDefault="true"
                name="None">
          </enumeratedOptionValue>
       </option>
@@ -1838,7 +1838,6 @@
          </option>
          <option
                category="org.eclipse.cdt.cross.arc.gnu.cpp.link.category.other"
-               defaultValue="--specs=nsim.specs"
                id="org.eclipse.cdt.cross.arc.gnu.cpp.link.option.otherflags"
                name="Other flags"
                valueType="string">
@@ -7329,7 +7328,7 @@
          </toolChain>
       </template>
       <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK2_HelloWorld_CPP_Project">
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM7D_HelloWorld_CPP_Project">
          <toolChain
                id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
          </toolChain>
@@ -7338,7 +7337,43 @@
          </toolChain>
       </template>
       <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK2_HelloWorld_C_Project">
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM9D_HelloWorld_CPP_Project">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM11D_HelloWorld_CPP_Project">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM7D_HelloWorld_C_Project">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM9D_HelloWorld_C_Project">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM11D_HelloWorld_C_Project">
          <toolChain
                id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
          </toolChain>
@@ -7417,14 +7452,14 @@
       </template>
       <template
             filterPattern=".*g\+\+"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK2_HelloWorld_CPP_Project"
-            location="$nl$/templates/projecttemplates/EMSK2_HelloWorld_CPP_Project/template.xml"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM7D_HelloWorld_CPP_Project"
+            location="$nl$/templates/projecttemplates/EMSK_EM7D_HelloWorld_CPP_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
       </template>
       <template
             filterPattern=".*gcc"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK2_HelloWorld_C_Project"
-            location="$nl$/templates/projecttemplates/EMSK2_HelloWorld_C_Project/template.xml"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM7D_HelloWorld_C_Project"
+            location="$nl$/templates/projecttemplates/EMSK_EM7D_HelloWorld_C_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
       </template>
       <template
@@ -7510,6 +7545,30 @@
             filterPattern=".*g\+\+"
             id="org.eclipse.cdt.cross.arc.gnu.templates.EM11_Empty_CPP_Project"
             location="$nl$/templates/projecttemplates/EM11_Empty_CPP_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+      </template>
+      <template
+            filterPattern=".*g\+\+"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM9D_HelloWorld_CPP_Project"
+            location="$nl$/templates/projecttemplates/EMSK_EM9D_HelloWorld_CPP_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+      </template>
+      <template
+            filterPattern=".*gcc"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM9D_HelloWorld_C_Project"
+            location="$nl$/templates/projecttemplates/EMSK_EM9D_HelloWorld_C_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+      </template>
+      <template
+            filterPattern=".*g\+\+"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM11D_HelloWorld_CPP_Project"
+            location="$nl$/templates/projecttemplates/EMSK_EM11D_HelloWorld_CPP_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+      </template>
+      <template
+            filterPattern=".*gcc"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM11D_HelloWorld_C_Project"
+            location="$nl$/templates/projecttemplates/EMSK_EM11D_HelloWorld_C_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
       </template>
    </extension>
