elf32: Remove unecessary info from EM Starter Kit templates
Remove unnecessary label prefixes for translatable text of EM Starter
Kit templates, thus making files similar.

--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em11d_HelloWorld_cpp/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em11d_HelloWorld_cpp/template.properties
@@ -1,28 +1,20 @@
-###############################################################################
-# Copyright (c) 2007 Symbian Software Private Ltd. and others.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
-# which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
-# 
-# Contributors:
-#     Bala Torati (Symbian) - initial API and implementation
-#     Synopsys, Inc. - ARC GNU Toolchain support
-###############################################################################
+template.label=Hello World for ARC EM Starter Kit EM11D
+template.description=A skeletal C++ Hello World project for EM Starter Kit EM11D. Creates a folder for sources.
 
-#Template Default Values
-EMSK_EM11D_HelloWorld.CCtemplate.label=Hello World for ARC EM Starter Kit EM11D Project
-EMSK_EM11D_HelloWorld.CCtemplate.description=A skeletal Managed C++ Hello World project for EM Starter Kit 11D. Creates a folder for sources and another for include.
-EMSK_EM11D_HelloWorld.basics.label=Basic Settings
-EMSK_EM11D_HelloWorld.basics.description=Basic properties of a project
-EMSK_EM11D_HelloWorld.author.label=Author
-EMSK_EM11D_HelloWorld.author.description=Name of the author
-EMSK_EM11D_HelloWorld.copyright.label=Copyright notice
-EMSK_EM11D_HelloWorld.copyright.description=Your copyright notice
-EMSK_EM11D_HelloWorld.copyright.default=Your copyright notice
-EMSK_EM11D_HelloWorld.message.default=!!!Hello ARC World!!!
-EMSK_EM11D_HelloWorld.message.description=Your hello world greeting message
-EMSK_EM11D_HelloWorld.message.label=Hello world greeting
-EMSK_EM11D_HelloWorld.sourceDir.label=Source
-EMSK_EM11D_HelloWorld.sourceDir.description=Directory for hello world project source files
-EMSK_EM11D_HelloWorld.sourceDir.default=src
+basics.label=Basic Settings
+basics.description=Basic properties of a project
+
+author.label=Author
+author.description=Name of the author
+
+copyright.label=Copyright notice
+copyright.description=Your copyright notice
+copyright.default=Your copyright notice
+
+message.default=!!!Hello ARC World!!!
+message.description=Your hello world greeting message
+message.label=Hello world greeting
+
+sourceDir.label=Source
+sourceDir.description=Directory for hello world project source files
+sourceDir.default=src
