maven: Remove duplicate artifact version from pom.xml files
Version of parent is enough.

--- a/com.arc.embeddedcdt/pom.xml
+++ b/com.arc.embeddedcdt/pom.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0"?>
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.arc.cdt</groupId>
@@ -7,6 +7,5 @@
     <version>2019.3.0-SNAPSHOT</version>
   </parent>
   <artifactId>com.arc.embeddedcdt</artifactId>
-  <version>2019.3.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 </project>
