Rename projects to cluster together in Eclipse' Project View

--- a/feature/.project
+++ b/feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ARC GNU Eclipse Feature</name>
+	<name>gnu.eclipse_feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
