--- a/org.eclipse.cdt.cross.arc.gnu.uclibc/.project
+++ b/org.eclipse.cdt.cross.arc.gnu.uclibc/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ARC_Uclibc</name>
+	<name>gnu.uclibc</name>
 	<comment></comment>
 	<projects>
 	</projects>
