--- a/org.eclipse.cdt.cross.arc.gnu/.project
+++ b/org.eclipse.cdt.cross.arc.gnu/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Elf32</name>
+	<name>gnu.elf32</name>
 	<comment></comment>
 	<projects>
 	</projects>
