--- a/repository/.project
+++ b/repository/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ARC GNU Eclipse Update Site</name>
+	<name>gnu.update_site</name>
 	<comment></comment>
 	<projects>
 	</projects>
