--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -62,6 +62,11 @@
             name="ARC IoT Development Kit Projects"
             property="org.eclipse.cdt.build.core.buildArtefactType">
       </propertyValue>
+      <propertyValue
+            id="c.s.a.gnu.elf.buildArtefactType.application.hsdk"
+            name="ARC HS Development Kit Projects"
+            property="org.eclipse.cdt.build.core.buildArtefactType">
+      </propertyValue>
    </extension>
    
    <!-- eb discovery extensions -->
@@ -7314,6 +7319,39 @@
             </toolChain>
          </configuration>
       </projectType>
+      <projectType
+            buildArtefactType="c.s.a.gnu.elf.buildArtefactType.application.hsdk"
+            id="c.s.a.gnu.elf.project.hsdk"
+            isAbstract="false">
+         <configuration
+               artifactExtension="elf"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
+               id="c.s.a.gnu.elf.project.hsdk.debug"
+               name="Debug"
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
+            <toolChain
+                  id="c.s.a.gnu.elf.project.hsdk.debug.toolchain"
+                  isAbstract="false"
+                  secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;org.eclipse.cdt.cross.arc.gnu.createlisting.output;org.eclipse.cdt.cross.arc.gnu.printsize.output"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.hs"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.hs.linux.c.linker.base;org.eclipse.cdt.cross.arc.gnu.hs.linux.cpp.linker.base">
+            </toolChain>
+         </configuration>
+         <configuration
+               artifactExtension="elf"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
+               id="c.s.a.gnu.elf.project.hsdk.release"
+               name="Release"
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
+            <toolChain
+                  id="c.s.a.gnu.elf.project.hsdk.release.toolchain"
+                  isAbstract="false"
+                  secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;org.eclipse.cdt.cross.arc.gnu.createlisting.output;org.eclipse.cdt.cross.arc.gnu.printsize.output"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.hs"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.hs.linux.c.linker.base;org.eclipse.cdt.cross.arc.gnu.hs.linux.cpp.linker.base">
+            </toolChain>
+         </configuration>
+      </projectType>
 
 
    </extension>
@@ -7512,6 +7550,24 @@
             projectType="c.s.a.gnu.elf.buildArtefactType.application.iotdk">
          <toolChain
                id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            filterPattern=".*gcc"
+            id="c.s.a.gnu.elf.templates.hsdk_empty_c"
+            location="templates/projecttemplates/hsdk_empty_c/template.xml"
+            projectType="c.s.a.gnu.elf.buildArtefactType.application.hsdk">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.hs">
+         </toolChain>
+      </template>
+      <template
+            filterPattern=".*g\+\+"
+            id="c.s.a.gnu.elf.templates.hsdk_empty_cpp"
+            location="templates/projecttemplates/hsdk_empty_cpp/template.xml"
+            projectType="c.s.a.gnu.elf.buildArtefactType.application.hsdk">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.hs">
          </toolChain>
       </template>
 
